--- a/app/Resources/FOSUserBundle/views/Registration/register_content.html.twig
+++ b/app/Resources/FOSUserBundle/views/Registration/register_content.html.twig
@@ -6,29 +6,47 @@
 
 {% block body %}
 
-    <div id="bodyMenu" class="animsition">
     <div class="container">
-    <header id="headMenu" class="row">
+
+        <div class="color-orange">
+    <div class="row">
         <div class="col-md-4 col-sm-12 col-xs-12">
-            <div id="title2" class="animated fadeIn animated zoomInDown"><img src="{{ asset('img/icon/logopetit.png') }}" class="animated pulse"></div></div>
-        <div class="col-md-4"></div>
-        <div id="les3IconsMenu" class="col-md-4 hidden-sm-down animated pulse">
-
-            <a id="iconMenu" class="animated fadeIn" href="{{ path('menu') }}"><img class="tailleIcon" src="{{ asset('img/icon/close.png') }}"><br/><span  class="txtSousMenu">back</span></a>
-
-            <a id="iconContact" class="animated fadeIn" href="{{ path('fos_user_registration_register') }}"><img class="tailleIcon" src="{{ asset('img/icon/contact.png') }}"><br/><span class="txtSousMenu" >contact</span></a>
-
-            <a id="iconAccount" class="animated fadeIn" href="{{ path('fos_user_registration_register') }}"><img class="tailleIcon" src="{{ asset('img/icon/account.png') }}"><br/><span class="txtSousMenu" style="font-size:xx-small ">my account</span></a>
-        </div>
-    </header>
-
-        <div class="row" style="height: 30%">
-            <div class="col-md-12">ligne 2
+            <div class="animated fadeIn animated zoomInDown title2">
+                <img src="{{ asset('img/icon/logopetit.png') }}" class="animated pulse">
             </div>
         </div>
-    <footer class="row" style="height: 60%">
+
+        <div class="col-md-4"></div>
+        <div class="col-md-4 hidden-sm-down animated pulse les-3-icons">
+            <a id="iconMenu" class="animated fadeIn" href="{{ path('menu') }}">
+                <img class="tailleIcon" src="{{ asset('img/icon/close.png') }}">
+                <div class="txtSousMenu">
+                    back
+                </div>
+            </a>
+            <a id="iconContact" class="animated fadeIn" href="{{ path('fos_user_registration_register') }}">
+                <img class="tailleIcon" src="{{ asset('img/icon/contact.png') }}">
+                <div class="txtSousMenu" >
+                    contact
+                </div>
+            </a>
+            <a id="iconAccount" class="animated fadeIn" href="{{ path('fos_user_registration_register') }}">
+                <img class="tailleIcon" src="{{ asset('img/icon/account.png') }}">
+                <div class="txtSousMenu" style="font-size:xx-small ">
+                    my account
+                </div>
+            </a>
+        </div>
+    </div>
+        </div>
+
+        <div id="ligne2Form" class="row">
+            <div class="col-md-12">
+                ligne 2
+            </div>
+        </div>
+    <div id="ligne3Form" class="row">
     <div class="col-md-8" >
-        {#{{ dump(form) }}#}
     {{ form_start(form)}}
         <div class="slide1">
         {{ form_label(form.username)}}
@@ -58,18 +76,13 @@
         {{ form_end(form) }}
     </div>
 
-        <div class="col-md-4"><div id="" class="animated fadeIn"><input id="button" type="button" name="button" onclick="showUser()"/><br/><span style="margin-left: 5%">next</span>
-                <div id="SuivantForm" class="animated fadeIn"><input id="button" type="button" name="button" onclick="showUser()" class="button"/><br/><span style="margin-left: 5%">suivant</span>
-            </div>
+        <div class="col-md-4">
+            <div class="animated fadeIn">
+                <input id="button"/>
         </div>
-        </footer>
-
-
+        </div>
     </div>
     </div>
 
-    <div>
-
-
-    {% block SuiteJavascripts %}  <script src="{{ asset('js2/form.js2') }}"></script>{% endblock %}
+    {% block SuiteJavascripts %}  <script src="{{ asset('') }}"></script>{% endblock %}
 {% endblock %}
