--- a/src/MainBundle/Resources/views/Default/menu.html.twig
+++ b/src/MainBundle/Resources/views/Default/menu.html.twig
@@ -1,24 +1,40 @@
 {% extends 'layout/base.html.twig' %}
 
 {% block body %}
-    <div id="bodyMenu" class="animsition">
+
 <div class="container">
-        <header id="headMenu" class="row">
-
+    <div class="color-orange">
+        <div class="row">
             <div class="col-md-4 col-sm-12 col-xs-12">
-                <div id="title2" class="animated fadeIn animated zoomInDown"><img src="{{ asset('img/icon/logopetit.png') }}" class="animated pulse"></div></div>
-            <div class="col-md-4"></div>
-            <div id="les3IconsMenu" class="col-md-4 hidden-sm-down animated pulse">
-
-                <a id="iconMenu" class="animated fadeIn" href="{{ path('home') }}"><img class="tailleIcon" src="{{ asset('img/icon/close.png') }}"><br/><span  class="txtSousMenu">close</span></a>
-
-                <a id="iconContact" class="animated fadeIn" href="{{ path('fos_user_registration_register') }}"><img class="tailleIcon" src="{{ asset('img/icon/contact.png') }}"><br/><span class="txtSousMenu" >contact</span></a>
-
-                <a id="iconAccount" class="animated fadeIn" href="{{ path('fos_user_registration_register') }}"><img class="tailleIcon" src="{{ asset('img/icon/account.png') }}"><br/><span class="txtSousMenu" style="font-size:xx-small ">my account</span></a>
+                <div class="animated fadeIn animated zoomInDown title2 ">
+                    <img src="{{ asset('img/icon/logopetit.png') }}" class="animated pulse">
+                </div>
             </div>
-        </header>
+            <div class="col-md-4">
+            </div>
+            <div class="col-md-4 hidden-sm-down animated pulse les-3-icons">
+                <a id="iconMenu" class="animated fadeIn" href="{{ path('home') }}">
+                    <img class="tailleIcon" src="{{ asset('img/icon/close.png') }}">
+                    <div  class="txtSousMenu">
+                        close
+                    </div>
+                </a>
+                <a id="iconContact" class="animated fadeIn" href="{{ path('fos_user_registration_register') }}">
+                    <img class="tailleIcon" src="{{ asset('img/icon/contact.png') }}">
+                    <div class="txtSousMenu" >
+                        contact
+                    </div>
+                </a>
+                <a id="iconAccount" class="animated fadeIn" href="{{ path('fos_user_registration_register') }}">
+                    <img class="tailleIcon" src="{{ asset('img/icon/account.png') }}">
+                    <div class="txtSousMenu" style="font-size:xx-small ">
+                        my account
+                    </div>
+                </a>
+            </div>
+        </div>
 
-
+    </div>
 
     <div id="ligne1Menu" class="row">
 
@@ -28,6 +44,11 @@
         <img id="line1" src="{{ asset('img/line.png') }}"><br>
         W.TEKAM, Blockchain Engineer
     </div>
+        <div class="learn">
+            <a class="btn btn-africaunchained" href="{{ path('projet') }}">
+                < project + >
+            </a>
+        </div>
     </div>
 
 <div id="photo2"class="col-md-7">
@@ -43,9 +64,11 @@
         <img style="margin-left: 53%" id="line1" src="{{ asset('img/line.png') }}"><br>
        <p style="margin-left: 35%">M.Ratsiraka, Developper, Co-Founder</p>
     </div>
-
-    <a id="BoutonProjetLien" href="{{ path('projet') }}"><button id="buttonProjet2">< Project + ></button></a>
-
+    <div class="learn">
+        <a class="btn btn-africaunchained" href="{{ path('projet') }}">
+            < project + >
+        </a>
+    </div>
 
 </div>
 </div>
@@ -63,6 +86,11 @@
         <img style="margin-left: 53%" id="line1" src="{{ asset('img/line.png') }}"><br>
         <p style="margin-left: 35%">M.W.Samai, Blockchain Enginneer</p>
     </div>
+    <div class="learn">
+        <a class="btn btn-africaunchained" href="{{ path('projet') }}">
+            < project + >
+        </a>
+    </div>
 </div>
         <div id="photo4" class="col-md-5 hidden-sm-down">
 
@@ -72,13 +100,19 @@
                 W.TEKAM, Blockchain Enginneer
             </div>
 
+            <div class="learn">
+                <a class="btn btn-africaunchained" href="{{ path('projet') }}">
+                    < project + >
+                </a>
+            </div>
+
         </div>
 
     </footer>
 
 </div>
 
-    </div>
+
 
 
 {% endblock %}
