--- a/src/MainBundle/Resources/views/Default/home.html.twig
+++ b/src/MainBundle/Resources/views/Default/home.html.twig
@@ -2,11 +2,10 @@
 
 {% block title %}HomePage{% endblock %}
 
-{% block body_id "img1" %}
-
-{% block body %}
+{% block body  %}
+    <div class="img1">
     <div class="container">
-        <div class="row">
+        <div id="ligne1" class="row">
             <div class="col-md-4 col-sm-12 col-xs-12">
                 <div class="animated fadeIn animated zoomInDown title">
                     <img src="{{ asset('img/icon/logopaysage.png') }}" class="animated pulse" />
@@ -16,22 +15,29 @@
             <div class="col-md-4 hidden-sm-down animated pulse les-3-icons">
                 <a id="iconMenu" class="animated fadeIn" href="{{ path('menu') }}">
                     <img class="tailleIcon" src="{{ asset('img/icon/menu.png') }}">
-                    <div class="txtSousMenu">menu</div>
+                    <div class="txtSousMenu">
+                        menu
+                    </div>
                 </a>
                 <a id="iconContact" class="animated fadeIn" href="{{ path('fos_user_registration_register') }}">
                     <img class="tailleIcon" src="{{ asset('img/icon/contact.png') }}">
-                    <div class="txtSousMenu">contact</div>
+                    <div class="txtSousMenu">
+                        contact
+                    </div>
                 </a>
                 <a id="iconAccount" class="animated fadeIn" href="{{ path('fos_user_registration_register') }}">
                     <img class="tailleIcon" src="{{ asset('img/icon/account.png') }}">
-                    <div class="txtSousMenu">my account</div>
+                    <div class="txtSousMenu">
+                        my account
+                    </div>
                 </a>
             </div>
         </div>
 
         <div id="ligne2" class="row">
-            <div class="col-12 bandeau-noir animated slideInRight"></div>
-            <div class="col-8">hhhhhhhhhhhhhhhhhh
+            <div class="col-12 bandeau-noir animated slideInRight">
+            </div>
+            <div class="col-8">
             </div>
             <div class="col-4">
                 <div class="learn">
@@ -42,20 +48,21 @@
             </div>
         </div>
 
-        <div id="paragraphe" class="row">
-            <div class="col-6">
+        <div id="ligne3" class="row">
+            <div class="col-md-6 hidden-sm-down hidden-xs-down ">
                 <div id="boutonNext" class="animated fadeIn">
-                    <input id="button" type="button" name="button" onclick="showUser()" class="button"/>
+                    <input id="button"  type="button"/>
                 </div>
             </div>
-            <div class="col-6">
+
+            <div id="paragraphe" class="col-md-6 col-sm-12 col-xs-12">
                 <div id="citeEtLine">
                     <img id="cite"  src="{{ asset('img/cite.png') }}">
                     <img id="line1" src="{{ asset('img/icon/line.png') }}">
                 </div>
-                <div id="text">
+                <div  class="text">
                     <h1>Blockchain is</h1>
-                    <blockquote CLASS="sizeText">a remarkable cryptographic
+                    <blockquote class="sizeText">a remarkable cryptographic
                         <br>achievement ant the ability to create
                         <br>something that is not duplicable in
                         <br>the digital world has enormous value.
@@ -66,94 +73,74 @@
                 <div id="motFin">
                     M.Ravony, CEO ,Co-Founder
                 </div>
-             </div>
+                </div>
+
+        </div>
+        </div>
+
+            <div class="container">
+                <div class="row">
+                    <div id="footer" class="col-lg-12 hidden-md-up col-sm-offset-12 col-xs-offset-12 les-3-icons">
+                        <a id="iconMenu" class="animated fadeIn" href="{{ path('menu') }}">
+                            <img class="tailleIcon" src="{{ asset('img/icon/menu.png') }}">
+                            <div class="txtSousMenu">
+                                menu
+                            </div>
+                        </a>
+                        <a id="iconContact" class="animated fadeIn" href="{{ path('fos_user_registration_register') }}">
+                            <img class="tailleIcon" src="{{ asset('img/icon/contact.png') }}">
+                            <div class="txtSousMenu">
+                                contact
+                            </div>
+                        </a>
+                        <a id="iconAccount" class="animated fadeIn" href="{{ path('fos_user_registration_register') }}">
+                            <img class="tailleIcon" src="{{ asset('img/icon/account.png') }}">
+                            <div class="txtSousMenu">
+                                my account
+                            </div>
+                        </a>
+                        <a id="IconIsole" class="animated fadeIn" href="{{ path('fos_user_registration_register') }}">
+                            <img class="tailleIcon" src="{{ asset('img/icon/slide suivant.png') }}">
+                            <div class="txtSousMenu">
+                                next
+                            </div>
+                        </a>
+                    </div>
+                </div>
+            </div>
+    </div>
+
+    <div id="ligne2-2" class="row" >
+        <div class="col-12 bandeau-noir2 animated slideInRight">
+        </div>
+        <div class="col-8">
+        </div>
+        <div class="col-4">
+            <div class="learn">
+                <a class="btn btn-africaunchained" href="{{ path('projet') }}">
+                    < project + >
+                </a>
+            </div>
         </div>
     </div>
 
-
-
-    {#<div class="container">#}
-        {#<div class="row">#}
-       {##}
-        {#</div>#}
-    {#</div>#}
-
-    {#<div id="ligne2-2" class="row">#}
-    {#<div id="bandeauNoir2" class=" col-md-12 animated slideInRight">#}
-    {#<div id="ligne2Interne" class="row">#}
-    {#<div class="col-md-8"></div>#}
-    {#<div id="learn" class="col-md-4">#}
-
-    {#<a id="BoutonProjetLien" href="{{ path('projet') }}"><button id="buttonProject">< Project + ></button></a>#}
-
-    {#</div>#}
-    {#</div>#}
-    {#</div>#}
-
-    {#</div>#}
-    {#<div class="container">#}
-        {#<div class="row">#}
-            {#<div id="ligne3" class="row">#}
-                {#<div class="col-md-4 hidden-sm-down hidden-xs-down ">#}
-                    {#<div id="boutonNext" class="animated fadeIn">#}
-                        {#<input id="button" type="button" name="button" onclick="showUser()" class="button"/>#}
-                        {#<span style="margin-left: 5%">next</span>#}
-                    {#</div>#}
-                {#</div>#}
-
-                {#<div id="paragraphe" class="col-md-8 col-sm-12 col-xs-12 animated zoomIn ">#}
-                    {#<div id="citeEtLine"><img id="cite"  src="{{ asset('img/cite.png') }}">#}
-                        {#<img id="line1" src="{{ asset('img/icon/line.png') }}"></div>#}
-                    {#<div id="text" style="">#}
-                        {#<h1>Blockchain is</h1>#}
-                        {#<blockquote CLASS="sizeText">a remarkable cryptographic#}
-                            {#<br>achievement ant the ability to create#}
-                            {#<br>something that is not duplicable in#}
-                            {#<br>the digital world has enormous value.#}
-                        {#</blockquote>#}
-                    {#</div>#}
-                    {#<img id="line2" src="{{ asset('img/icon/line.png') }}"><br>#}
-                    {#<div id="motFin">M.Ravony, CEO ,Co-Founder</div>#}
-                {#</div>#}
-
-            {#</div>#}
-        {#</div>#}
-    {#</div>#}
-    {#<div id="paragraphe2" class="col-md-8 col-sm-12 col-xs-12 animated zoomIn ">#}
-
-    {#<div id="citeEtLine"><img id="cite"  src="{{ asset('img/cite.png') }}"><br><img id="line1" src="{{ asset('img/icon/line.png') }}"></div>#}
-    {#<div id="text">#}
-    {#<h1>I'm reasonably <br>confident</h1>#}
-    {#<blockquote class="sizeText">that the blockchain will change a#}
-    {#<br>great deal of financial practice and#}
-    {#<br> exchange.#}
-    {#</blockquote>#}
-    {#</div>#}
-    {#<img id="line2Home2" src="{{ asset('img/icon/line.png') }}"><br>#}
-    {#<div id="motFin2">C.H.Ravony, Idea Architect,Co-Founder</div>#}
-    {#</div>#}
-    {#<div class="container">#}
-        {#<div class="row">#}
-            {#<div id="les4Icons" class="col-lg-12 hidden-md-up col-sm-offset-12 col-xs-offset-12">#}
-                {#<a id="IconIsole" class="animated fadeIn" href="{{ path('fos_user_registration_register') }}">#}
-                    {#<img class="tailleIcon" src="{{ asset('img/icon/slide suivant.png') }}">#}
-                    {#<span class="txtSousMenu">next</span>#}
-                {#</a>#}
-                {#<a id="iconMenu" class="animated fadeIn" href="{{ path('menu') }}">#}
-                    {#<img class="tailleIcon" src="{{ asset('img/icon/menu.png') }}">#}
-                    {#<span  class="txtSousMenu">menu</span>#}
-                {#</a>#}
-                {#<a id="iconContact" class="animated fadeIn" href="{{ path('fos_user_registration_register') }}">#}
-                    {#<img class="tailleIcon" src="{{ asset('img/icon/contact.png') }}">#}
-                    {#<span class="txtSousMenu" >contact</span>#}
-                {#</a>#}
-                {#<a id="iconAccount" class="animated fadeIn" href="{{ path('fos_user_registration_register') }}">#}
-                    {#<img class="tailleIcon" src="{{ asset('img/icon/account.png') }}">#}
-                    {#<span class="txtSousMenu" style="font-size:xx-small ">my account</span>#}
-                {#</a>#}
-            {#</div>#}
-        {#</div>#}
-    {#</div>#}
+    <div id="paragraphe2" class="col-md-6 col-sm-12 col-xs-12 animated zoomIn ">
+    <div id="citeEtLine">
+        <img id="cite"  src="{{ asset('img/cite.png') }}">
+        <img id="line1" src="{{ asset('img/icon/line.png') }}">
+    </div>
+    <div class="text">
+    <h1>I'm reasonably <br>confident</h1>
+    <blockquote class="sizeText">that the blockchain will change a
+    <br>great deal of financial practice and
+    <br> exchange.
+    </blockquote>
+    </div>
+    <img id="line2Home2" src="{{ asset('img/icon/line.png') }}"><br>
+    <div id="motFin2">
+        C.H.Ravony, Idea Architect,Co-Founder
+    </div>
+    </div>
 
 {% endblock %}
 
