--- a/src/MainBundle/Resources/views/Default/home.html.twig
+++ b/src/MainBundle/Resources/views/Default/home.html.twig
@@ -11,7 +11,7 @@
                     <img src="{{ asset('img/icon/logopaysage.png') }}" class="animated pulse" />
                 </div>
             </div>
-            <div class="col-md-4"></div>
+            <div class="col-md-4 hidden-sm-down"></div>
             <div class="col-md-4 hidden-sm-down animated pulse les-3-icons">
                 <a id="iconMenu" class="animated fadeIn" href="{{ path('menu') }}">
                     <img class="tailleIcon" src="{{ asset('img/icon/menu.png') }}">
